Tentativa resolver overflow no contato

--- a/src/app/componentes/contact/contact.component.scss
+++ b/src/app/componentes/contact/contact.component.scss
@@ -11,7 +11,7 @@
 }
 
 .body{
-    @apply  flex flex-col justify-center items-start w-[70%] h-full pl-8 bg-blue-200;
+    @apply  flex flex-col justify-center items-start w-[70%] h-full pl-8 bg-blue-200 ;
 }
 
 .name-container .last-message-container{
@@ -23,7 +23,7 @@
 }
 
 .last-message{
-    @apply w-full truncate text-[95%] bg-pink-200;
+    @apply w-[24rem] max-w-full truncate text-[95%] bg-pink-200;
 }
 
 .side-info{
